--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+<%= link_to "Sign out", destroy_user_session_path, method: "delete" %>
+
+<%= link_to "Sign in", new_user_session_path %>
+
 <%= yield %>
 
 </body>
