--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@post) do |f| %>
+<%= form_for@post, :url => posts_path, :html => { :multipart => true }  do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
@@ -23,6 +23,12 @@
     <%= f.label :user_id %><br>
     <%= f.text_field :user_id %>
   </div>
+
+
+
+    <%= f.file_field :avatar %>
+
+
   <div class="actions">
     <%= f.submit %>
   </div>
