--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,6 +3,6 @@
     <%= link_to "Edit Account Info", edit_user_registration_path %>
 
 <% else %>
-    <%= link_to "Sign in", new_user_session_path %><
+    <%= link_to "Sign in", new_user_session_path %>
 <% end %>
 <%= yield %>
