Full mailer functionality with devise gem

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,8 +17,10 @@
         <td><%= post.description %></td>
         <td><%= post.user %></td>
         <td><%= link_to 'Show', post %></td>
+        <% if is_my_post?(post) %>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
