--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -20,9 +20,10 @@
 <div><%= link_to image_tag(@post.avatar1.url(:medium)), @post.avatar1.url  %></div><br>
 <div><%= link_to image_tag(@post.avatar2.url(:medium)), @post.avatar2.url  %></div><br>
 
-
+<% if is_my_post?(@post) %>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
+<% end %>
 <%= link_to 'Back', posts_path %>
 
 
