--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,11 @@
-<% if signed_in? %>
-    <%= link_to "Sign out", destroy_user_session_path, method: "delete" %>
-    <%= link_to "Edit Account Info", edit_user_registration_path %>
-
+<% if user_signed_in? %>
+Signed in as <%= current_user.email %>. Not you?
+<%= link_to "Edit Account Info", edit_user_registration_path %>
+<%= link_to "Sign out", destroy_user_session_path,:method => :delete %>
 <% else %>
-    <%= link_to "Sign in", new_user_session_path %>
+<%= link_to "Sign up", new_user_registration_path %> or
+<%= link_to "Sign in", new_user_session_path %>
+<%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
 <% end %>
+
 <%= yield %>
