--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,6 @@
 <%= render 'layouts/header' %>
 
 
-<%= link_to "Moderator Options", rails_admin_path %>
+| <%= link_to "Moderator Options", rails_admin_path %> |
 </body>
 </html>
