--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? %>
-| Signed in as | <%= link_to current_user.email, edit_user_registration_path %>. | Not you? |
+| Signed in as | <%= link_to current_user.email, edit_user_registration_path %>. Not you? |
 | <%= link_to "Sign out", destroy_user_session_path,:method => :delete %> |
 <% else %>
 | <%= link_to "Sign up", new_user_registration_path %>|  or
